<resources>
    <string name="app_name">Notes</string>
    <string name="action_settings">Settings</string>

    <string name="panelInfo">Dzięki naszej aplikacji będziesz w stanie tworzyć nowe notatki tekstowe oraz grafiki, dodawać zdjęcia oraz przydatne dla Ciebie linki.
        Najfajniejszą opcją jest to, że będziesz mógł się nimi dzielić</string>
    <string name="logIn">Witaj w najlepszej aplikacji notatnikowej</string>
    <string name="log">Zaloguj</string>
    <string name="registry">Rejestracja</string>
    <string name="username">E-Mail:</string>
    <string name="passwd">Hasło:</string>
    <string name="passwdChange">Zmień hasło</string>
    <string name="reg">Akceptuje zasady regulaminu.</string>
    <string name="userNameHint">email@address.com</string>
    <string name="passwdHint">haslo</string>
    <string name="fullName">Imie i Nazwisko:</string>
    <string name="fullNameHint">(pelne imie i nazwisko)</string>
    <string name="regButton">Zarejestruj</string>
    <string name="backButon">Powrót</string>
    <string name="menu">MENU</string>
    <string name="logout">Wyloguj</string>
    <string name="settings">Ustawienia</string>
    <string name="title_activity_settings">Settings</string>
    <string name="deleteUser">Usuń konto</string>
    <string name="delete">Usuń</string>
    <string name="share">Udostępnij</string>
    <string name="back">Powrót</string>
    <string name="title_activity_change_password">ChangePassword</string>
    <string name="newPassword">Nowe hasło</string>
    <string name="newPasswordRepeat">Powtórz nowe hasło</string>
    <string name="newPasswordHint">(nowe hasło)</string>
    <string name="newPasswordRepeatHint">(powtórz nowe hasło)</string>
    <string name="oldPassword">Stare hasło</string>
    <string name="oldPasswordHint">(stare hasło)</string>
    <string name="managementMenu">Grupy notatkowe</string>
    <string name="add">Dodaj</string>
    <string name="downloadPdf">Pobierz plik pdf</string>
    <string name="title_activity_note_group">NoteGroupActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>