<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".main.account.RegistrationActivity"
    android:layout_margin="30dp">

    <TextView
        android:id="@+id/regLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/registry"
        android:layout_margin="30sp"
        android:gravity="center"
        android:textSize="40sp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        />


    <TextView
        android:id="@+id/usernameLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/regLabel"
        android:text="@string/username"
        android:height="40sp"
        android:gravity="center"
        android:textSize="15sp"
        android:layout_alignParentStart="true"
        />

    <EditText
        android:id="@+id/username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/regLabel"
        android:layout_alignBottom="@id/usernameLabel"
        android:layout_alignParentEnd="true"
        android:layout_toEndOf="@id/usernameLabel"
        android:hint="@string/userNameHint"
        android:inputType="textEmailAddress" />
    <TextView
        android:id="@+id/passwdLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/usernameLabel"
        android:text="@string/passwd"
        android:height="40sp"
        android:gravity="center"
        android:textSize="15sp"
        android:layout_alignEnd="@id/usernameLabel"
        android:layout_alignParentStart="true"
        />
    <EditText
        android:id="@+id/passwd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/username"
        android:layout_toEndOf="@id/passwdLabel"
        android:layout_alignParentEnd="true"
        android:layout_alignBottom="@id/passwdLabel"
        android:hint="@string/passwdHint"
        android:inputType="textPassword"
        />

    <CheckBox
        android:id="@+id/checkReg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/passwd"
        android:layout_marginStart="50dp"
        android:layout_alignTop="@id/reg"
        android:layout_alignBottom="@id/reg"
        />

    <TextView
        android:id="@+id/reg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/passwd"
        android:layout_marginTop="15dp"
        android:layout_toEndOf="@id/checkReg"
        android:height="40dp"
        android:gravity="center"
        android:text="@string/reg"
        android:textSize="15sp" />

    <Button
        android:id="@+id/regButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/reg"
        android:text="@string/regButton"
        android:layout_marginStart="80dp"
        android:layout_marginEnd="80dp"
        />
    <Button
        android:id="@+id/backButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/regButton"
        android:text="@string/backButon"
        android:layout_marginStart="80dp"
        android:layout_marginEnd="80dp"

        />

</RelativeLayout>