<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".main.account.RegistrationActivity"
    android:layout_margin="30dp">

    <TextView
        android:id="@+id/passchanglabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/passwdChange"
        android:layout_margin="30sp"
        android:gravity="center"
        android:textSize="40sp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        />


    <TextView
        android:id="@+id/oldPasswordLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/passchanglabel"
        android:text="@string/oldPassword"
        android:height="40sp"
        android:gravity="center"
        android:textSize="15sp"
        android:layout_alignParentStart="true"
        />
    <EditText
        android:id="@+id/oldPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/passchanglabel"
        android:layout_toEndOf="@id/oldPasswordLabel"
        android:layout_alignParentEnd="true"
        android:layout_alignBottom="@id/oldPasswordLabel"
        android:hint="@string/oldPasswordHint"
        android:inputType="textPassword"
        />
    <TextView
        android:id="@+id/newPasswordLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/oldPasswordLabel"
        android:text="@string/newPassword"
        android:height="40sp"
        android:gravity="center"
        android:textSize="15sp"
        android:layout_alignEnd="@id/oldPasswordLabel"
        android:layout_alignParentStart="true"
        />
    <EditText
        android:id="@+id/newPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/oldPassword"
        android:layout_toEndOf="@id/newPasswordLabel"
        android:layout_alignParentEnd="true"
        android:layout_alignBottom="@id/newPasswordLabel"
        android:hint="@string/newPasswordHint"
        android:inputType="textPassword"
        />
    <TextView
        android:id="@+id/newPasswordRepeatLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/newPasswordLabel"
        android:text="@string/newPasswordRepeat"
        android:height="40sp"
        android:gravity="center"
        android:textSize="15sp"
        android:layout_alignEnd="@id/newPasswordLabel"
        android:layout_alignParentStart="true"
        />
    <EditText
        android:id="@+id/newPasswordRepeat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/newPassword"
        android:layout_toEndOf="@id/newPasswordRepeatLabel"
        android:layout_alignParentEnd="true"
        android:layout_alignBottom="@id/newPasswordRepeatLabel"
        android:hint="@string/newPasswordRepeatHint"
        android:inputType="textPassword"
        />

    <Button
        android:id="@+id/changePassButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/newPasswordRepeatLabel"
        android:text="@string/passwdChange"
        android:layout_centerHorizontal="true"
        />

    <Button
        android:id="@+id/changeBackButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/changePassButton"
        android:text="@string/backButon"
        android:layout_centerHorizontal="true"
        />

</RelativeLayout>