<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".main.account.Settings"
    android:layout_margin="30dp">


    <TextView
        android:id="@+id/menu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/settings"
        android:layout_centerHorizontal="true"
        android:textAlignment="center"
        android:gravity="center_horizontal"
        android:textSize="30sp"
        />

    <Button
        android:id="@+id/changePass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/menu"
        android:layout_marginTop="20dp"
        android:text="@string/passwdChange"
        android:textSize="20sp"
        />

    <Button
        android:id="@+id/deleteUser"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/changePass"
        android:layout_marginTop="20dp"
        android:text="@string/deleteUser"
        android:textSize="20sp"
        />
    <Button
        android:id="@+id/settingBackButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:text="@string/backButon"
        />

</RelativeLayout>